--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "cross-env NODE_ENV=production PORT=80 pm2 start app.js"
   },
   "author": "",
   "license": "ISC",
